Fix trino review 13-07-2023